Feature/users (#11)
* feature: Criando o role para cadastro de usuarios

* feature: Alteracao dos getters e setters e na busca da role

* feature: Implementacao do cadastro de usuario

* feature: Implementacao da geracao de token e verificacao dos endpoints para que acessem somente se logados.

* feature: Ajuste checkstyle.

* feature: Swagger atualizado.
