# service-schedule/docs/openapi.yaml
@@ -4,11 +4,49 @@ info:
   description: API para gerenciamento de prestadores de serviço e horários
   version: 1.0.0
 servers:
-  - url: http://localhost:8080  # Altere a URL conforme necessário
+  - url: http://localhost:8089  # Altere a URL conforme necessário
     description: Servidor local
 paths:
+  /auth/login:
+    post:
+      tags:
+        - Autenticação
+      summary: Login para autenticação de usuário
+      description: Autentica o usuário com email e senha e retorna um token JWT
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: Email do usuário
+                password:
+                  type: string
+                  description: Senha do usuário
+              required:
+                - email
+                - password
+      responses:
+        '200':
+          description: Login bem-sucedido
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  jwt:
+                    type: string
+                    description: Token JWT para autenticação
+        '401':
+          description: Credenciais inválidas
+
   /prestadores:
     get:
+      tags:
+        - Prestador
       summary: Obter todos os prestadores
       responses:
         '200':
@@ -20,6 +58,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/ServiceScheduleModel'
     post:
+      tags:
+        - Prestador
       summary: Cadastrar novo prestador
       requestBody:
         required: true
@@ -34,8 +74,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ServiceScheduleModel'
+
   /prestadores/{id}:
     get:
+      tags:
+        - Prestador
       summary: Obter prestador por ID
       parameters:
         - name: id
@@ -55,6 +98,8 @@ paths:
         '404':
           description: Prestador não encontrado
     delete:
+      tags:
+        - Prestador
       summary: Excluir prestador por ID
       parameters:
         - name: id
@@ -69,8 +114,11 @@ paths:
           description: Prestador excluído com sucesso
         '404':
           description: Prestador não encontrado
+
   /prestadores/{id}/horarios:
     post:
+      tags:
+        - Prestador
       summary: Associar horários ao prestador
       parameters:
         - name: id
@@ -95,8 +143,11 @@ paths:
           description: Prestador não encontrado
         '422':
           description: Horário duplicado ou inválido
+
   /prestadores/{id}/horarios-disponiveis:
     get:
+      tags:
+        - Prestador
       summary: Obter horários disponíveis do prestador
       parameters:
         - name: id
@@ -115,8 +166,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Horario'
+
   /prestadores/{idPrestador}/horarios/{idHorario}/agendar:
     post:
+      tags:
+        - Prestador
       summary: Agendar horário com o prestador
       parameters:
         - name: idPrestador
@@ -140,8 +194,11 @@ paths:
           description: Prestador ou horário não encontrado
         '422':
           description: Horário não disponível para agendamento
+
   /prestadores/{idPrestador}/horarios/{idHorario}/cancelar-agenda:
     post:
+      tags:
+        - Prestador
       summary: Cancelar agendamento de horário com o prestador
       parameters:
         - name: idPrestador
@@ -165,6 +222,7 @@ paths:
           description: Prestador ou horário não encontrado
         '422':
           description: Horário já está disponível
+
 components:
   schemas:
     ServiceScheduleModel:
