# service-schedule/src/main/java/com/serviceschedule/model/Horario.java
@@ -7,8 +7,12 @@ import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
+import lombok.Getter;
+import lombok.Setter;
 
 @Entity
+@Getter
+@Setter
 public class Horario {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -21,44 +25,4 @@ public class Horario {
     private String diaSemana;
     private String hora;
     private boolean disponivel;
-
-    public ServiceScheduleModel getPrestador() {
-        return prestador;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public void setPrestador(ServiceScheduleModel prestador) {
-        this.prestador = prestador;
-    }
-
-    public String getDiaSemana() {
-        return diaSemana;
-    }
-
-    public void setDiaSemana(String diaSemana) {
-        this.diaSemana = diaSemana;
-    }
-
-    public String getHora() {
-        return hora;
-    }
-
-    public void setHora(String hora) {
-        this.hora = hora;
-    }
-
-    public boolean isDisponivel() {
-        return disponivel;
-    }
-
-    public void setDisponivel(boolean disponivel) {
-        this.disponivel = disponivel;
-    }
-
-    public Long getId() {
-        return id;
-    }
 }
