# service-schedule/src/main/java/com/serviceschedule/model/Usuario.java
@@ -1,0 +1,50 @@
+package com.serviceschedule.model;
+
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import java.time.LocalDateTime;
+import lombok.Getter;
+import lombok.Setter;
+import org.springframework.data.annotation.LastModifiedDate;
+
+@Entity
+@Table(name = "users")
+@Getter
+@Setter
+public class Usuario {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "idUsuario")
+    private Long idUsuario;
+
+    @Column(name = "nome", nullable = false, length = 100)
+    private String nome;
+
+    @Column(name = "email", nullable = false, unique = true, length = 100)
+    private String email;
+
+    @Column(name = "password", nullable = false, length = 255)
+    private String password;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "idRole", nullable = false)
+    private Role role;
+
+    @Column(name = "disponivel", nullable = false)
+    private Boolean disponivel = true;
+
+    @LastModifiedDate
+    @Column(name = "criadoEm", nullable = false, updatable = false)
+    private LocalDateTime criadoEm = LocalDateTime.now();
+
+    @Column(name = "alteradoEm")
+    private LocalDateTime alteradoEm;
+}
